# prototype-trading-platform

./: .gitignore  BOOST_ALLOCATOR_FIX.md  CMakeLists.txt  CONTRIBUTING.md  FINAL_STATUS.md  MARKET_DATA_FIX.md  MIGRATION_SUMMARY.md  PLATFORM_STATUS.md  QUICK_START.md  README.md  SQLITE_FIX.md  VICTORY.md  conanfile.py  create_sample_db.cpp  debug_options_test.sh  debug_targets.cmake  fix_build.sh  run_simulation.sh  run_tests.sh  run_tests_debug.sh  test_basic_functionality.cpp  test_build.sh  test_quick_build.sh  test_sqlite.cpp  test_sqlite_build.sh  test_system_sqlite.sh  test_trading_engine_build.sh  test_types.cpp  test_types.sh  verify_build.sh
applications/: CMakeLists.txt  README.md
applications/MarketDataApp/: CMakeLists.txt  main.cpp
applications/TradingEngineApp/: CMakeLists.txt  main.cpp
applications/TradingFrontendApp/: CMakeLists.txt  TradingGUI.cpp  TradingGUI.hpp  main.cpp
docs/: BOOST_ALLOCATOR_FIX.md  CONTRIBUTING.md  FINAL_STATUS.md  MARKET_DATA_FIX.md  MIGRATION_SUMMARY.md  PLATFORM_STATUS.md  QUICK_START.md  SQLITE_FIX.md  TEST_FIXES.md  TROUBLESHOOTING.md  VICTORY.md
libraries/: CMakeLists.txt
libraries/DatabaseLayer/: CMakeLists.txt
libraries/DatabaseLayer/include/DatabaseLayer/: DatabaseLayer.hpp  Enums.hpp  Structure.hpp
libraries/DatabaseLayer/include/DatabaseLayer/ContractInfo/: ContractFetcher.hpp  ContractInfo.hpp  StoreProcedures.hpp
libraries/DatabaseLayer/include/DatabaseLayer/Logger/: Logger.hpp
libraries/DatabaseLayer/src/: ContractFetcher.cpp  Enums.cpp  Logger.cpp
libraries/MarketDataProvider/: CMakeLists.txt
libraries/MarketDataProvider/include/MarketDataProvider/: LadderBuilder.hpp  MarketDataProvider.hpp  NetworkSocket.hpp  Recovery.hpp  StreamManager.hpp  Structure.hpp
libraries/MarketDataProvider/src/: LadderBuilder.cpp  StreamManager.cpp
libraries/OptionsGreeks/: CMakeLists.txt
libraries/OptionsGreeks/include/OptionsGreeks/: OptionsGreeks.hpp
libraries/OptionsGreeks/include/OptionsGreeks/IVCalculator/: BlackScholesModel.hpp
libraries/OptionsGreeks/src/: BlackScholesModel.cpp  OptionsGreeks.cpp
libraries/TradingEngine/: CMakeLists.txt
libraries/TradingEngine/include/TradingEngine/: OrderManager.hpp  RiskManager.hpp  SocketServer.hpp  StrategyManager.hpp  TradingEngine.hpp
libraries/TradingEngine/src/: OrderManager.cpp  RiskManager.cpp
market_data_test/: CMakeLists.txt
playground/: test_basic.sh  test_fixes.sh  test_market_data.sh
playground/market_data_test/: test_market_data.cpp
simulation/: CMakeLists.txt  MarketDataSimulator.cpp  MarketDataSimulator.hpp  SampleData.cpp  SampleData.hpp  create_sample_db.cpp
simulation_data/: contracts.db  market_data.json  trading_engine.json
test_build/: CMakeLists.txt  simple_test.cpp
tests/: CMakeLists.txt  README.md
tests/libraries/: CMakeLists.txt
tests/libraries/DatabaseLayer/: CMakeLists.txt  test_database_layer.cpp
tests/libraries/MarketDataProvider/: CMakeLists.txt  test_market_data_provider.cpp
tests/libraries/OptionsGreeks/: CMakeLists.txt  test_options_greeks.cpp
tests/libraries/TradingEngine/: CMakeLists.txt  test_trading_engine.cpp
type_test/: CMakeLists.txt
